Refactor services and simplify methods for clarity
Removed unused AddonsService injections and improved method handling in ProductController. Replaced redundant parameter in abbreviate() and refined descriptions. Optimized switch-case handling in DummyPaymentService with Java 21 enhancements.